Quick fix to broken CSS (#157)
* Quick fix to broken CSS

With the recent CSS responsive design update an error has occured within the SASS and needs resolvin.

--- a/node/risk-app/client/sass/map-page.scss
+++ b/node/risk-app/client/sass/map-page.scss
@@ -21,6 +21,7 @@ $scenarioWidthCap: 980px;
 
   @media screen and (max-width: $tablet-width) {
     justify-content: start;
+  }
     
   .defra-map-key__close {
     display: none;
@@ -85,7 +86,7 @@ $scenarioWidthCap: 980px;
       color: #0b0c0c;
       
       &:hover {
-        background: #f3f2f1;
+        background-color: #f3f2f1;
         cursor: pointer;
       }
 
